data/src/main/java/com/example/data/network/error/IncorrectInputException.kt
package com.example.data.network.error

class IncorrectInputException: RuntimeException()